<resources>
    <string name="app_name">Book_App</string>
    <string name="Book_app">Book App</string>
    <string name="welcome_to_book_app">Welcome To Book App</string>
    <string name="login">Login</string>
    <string name="continue_without_login">Continue Without Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="new_user_signup">New User ? <b>SignUp</b></string>
    <string name="please_login">Please Login</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="create_new_account">Create New Account</string>
    <string name="dashboard_admin">Dashboard Admin</string>
    <string name="adc_example_com">adc@example.com</string>
    <string name="todo">TODO</string>
    <string name="dashboard_user">Dashboard User</string>
    <string name="add_category">Add Category</string>
    <string name="add_a_new_category">Add a new Category</string>
    <string name="submit">Submit</string>
    <string name="category_title">Category Title</string>
    <string name="search">Search</string>
    <string name="add_new_book">Add New Book</string>
    <string name="book_title">Book Title</string>
    <string name="book_description">Book Description</string>
    <string name="upload">Upload</string>
    <string name="_13_mb">13 MB</string>
    <string name="dd_mm_yyyy">dd/MM/yyyy</string>
    <string name="more">More</string>
    <string name="book">Book</string>
    <string name="category">Category</string>
    <string name="edit_book_info">Edit Book Info</string>
    <string name="update">Update</string>
    <string name="title_of_book">Title of Book</string>
    <string name="n_a">N/A</string>
    <string name="n_n">N/N</string>
    <string name="read_book">Read Book</string>
    <string name="read">Read</string>
    <string name="download">Download</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name_account">Name Account</string>
    <string name="member">Member</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="edit_name">Edit name</string>
    <string name="add_comment">Add Comment</string>
    <string name="comment">Comment</string>
</resources>