<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="140dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="5dp"
    app:cardBackgroundColor="@color/white"
    app:cardElevation="0dp"
    app:contentPadding="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        
        <RelativeLayout
            android:id="@+id/pdfRl"
            android:layout_width="100dp"
            android:layout_height="140dp"
            android:layout_marginEnd="5dp"
            android:background="@color/gray03">

            <com.github.barteksc.pdfviewer.PDFView
                android:id="@+id/pdfView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </RelativeLayout>

        <TextView
            android:id="@+id/bookTitleTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/book_title"
            android:maxLines="1"
            android:layout_toStartOf="@+id/moreBtn"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_toEndOf="@+id/pdfRl"/>

        <TextView
            android:id="@+id/bookDesTv"
            style="@style/TextAppearance.MaterialComponents.Body2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/book_description"
            android:layout_below="@+id/bookTitleTv"
            android:layout_toStartOf="@+id/moreBtn"
            android:textColor="@color/black"
            android:layout_toEndOf="@+id/pdfRl"
            android:maxLines="4"/>

        <RelativeLayout
            android:id="@+id/textRl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toEndOf="@+id/pdfRl">


            <TextView
                android:id="@+id/categoryTv"
                style="@style/TextAppearance.MaterialComponents.Caption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/_13_mb"
                android:maxLines="1"/>

            <TextView
                android:id="@+id/sizeTv"
                style="@style/TextAppearance.MaterialComponents.Caption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_13_mb"

                android:maxLines="1"/>

            <TextView
                android:id="@+id/dateTv"
                style="@style/TextAppearance.MaterialComponents.Caption"
                android:layout_width="wrap_content"
                android:layout_toEndOf="@+id/sizeTv"
                android:layout_toStartOf="@id/categoryTv"
                android:textAlignment="center"
                android:layout_height="wrap_content"
                android:text="@string/dd_mm_yyyy"
                android:maxLines="1"/>


        </RelativeLayout>

        <ImageButton
            android:id="@+id/moreBtn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/more"
            android:layout_alignParentEnd="true"
            android:background="@color/transparent"
            android:src="@drawable/ic_more_blac"/>

    </RelativeLayout>

</androidx.cardview.widget.CardView>