<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back01"
    android:padding="10dp"
    tools:context=".activities.MainActivity">

    <ImageView
        android:id="@+id/iconIv"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:src="@drawable/logo"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_book_app"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_below="@+id/iconIv"/>
    
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="15sp"
        android:padding="10dp"
        android:textAlignment="center"
        android:layout_above="@id/skipBtn"
        android:textColor="@color/white"
        android:background="@drawable/shape_button01"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"/>

    <Button
        android:id="@+id/skipBtn"
        android:background="@drawable/shape_button02"
        android:textStyle="bold"
        android:textSize="15sp"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/continue_without_login"
        android:textAlignment="center"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"/>



</RelativeLayout>