<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back01"
    tools:context=".activities.DashboardAdminActivity">

    <RelativeLayout
        android:id="@+id/toolbarRl"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@drawable/shape_toolbar02">


        <TextView
            android:id="@+id/titleTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="15sp"
            android:layout_centerHorizontal="true"
            android:text="@string/dashboard_admin"
            android:textColor="@color/white"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/subTitleTv"
            android:layout_width="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_height="wrap_content"
            android:text="@string/adc_example_com"
            android:layout_below="@+id/titleTv"
            android:textColor="@color/white"/>

        <ImageButton
            android:id="@+id/logoutBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_logout_white"
            android:background="@drawable/shape_button01"
            android:padding="15dp"
            android:contentDescription="@string/todo"
            android:layout_alignParentEnd="true"/>


    </RelativeLayout>

    <EditText
        android:id="@+id/searchEt"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:contentDescription="Edit"
        android:layout_below="@+id/toolbarRl"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/white"
        android:drawableLeft="@drawable/ic_search_gray"
        android:drawablePadding="5dp"
        android:hint="@string/search"
        android:padding="10dp"
        android:textColorHint="@color/gray03" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/categoriesRec"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottomLl"
        android:layout_below="@+id/searchEt"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="4dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/row_category" />

    <LinearLayout
        android:id="@+id/bottomLl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="-1dp"
        android:orientation="horizontal"
        android:padding="10dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/addCategoryBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:background="@drawable/shape_button01"
            android:minHeight="50dp"
            android:text="@string/add_category"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20dp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addPdfFab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue"
            android:src="@drawable/ic_pdf_add_white"
            android:tint="@color/white"
            android:contentDescription="Pdf"
            app:fabCustomSize="50dp" />

    </LinearLayout>

</RelativeLayout>