<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back01"
    tools:context=".activities.RegisterActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:background="@drawable/shape_toolbar01">

        <ImageButton
            android:id="@+id/backBtn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:padding="10dp"
            android:src="@drawable/ic_back_white"
            android:background="@color/transparent"
            android:contentDescription="@string/todo" />

        <ImageView
            android:id="@+id/iconIv"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:src="@drawable/logo"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_new_account"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="30sp"
            android:layout_below="@+id/iconIv"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-condensed"/>

    </RelativeLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="225dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nameTil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintEnabled="false"
                android:layout_marginTop="15dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <EditText
                    android:id="@+id/nameEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_person_gray"
                    android:background="@drawable/shape_edittext01"
                    android:hint="@string/name"
                    android:drawablePadding="10dp"
                    android:inputType="text"
                    android:padding="18dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray03"/>

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailTil"
                android:layout_width="match_parent"
                android:layout_below="@+id/nameTil"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:hintEnabled="false"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <EditText
                    android:id="@+id/emailEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_email_gray"
                    android:background="@drawable/shape_edittext01"
                    android:hint="@string/email"
                    android:drawablePadding="10dp"
                    android:inputType="textEmailAddress"
                    android:padding="18dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray03"/>

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordTil"
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/emailTil"
                app:hintEnabled="false"
                app:passwordToggleEnabled="true"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <EditText
                    android:id="@+id/passwordEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_lock_gray"
                    android:background="@drawable/shape_edittext01"
                    android:hint="@string/password"
                    android:drawablePadding="10dp"
                    android:inputType="textPassword"
                    android:padding="18dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray03"/>

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/confirmPasswordTil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/passwordTil"
                app:hintEnabled="false"
                app:passwordToggleEnabled="true"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <EditText
                    android:id="@+id/confirmPasswordEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_lock_gray"
                    android:background="@drawable/shape_edittext01"
                    android:hint="@string/confirm_password"
                    android:drawablePadding="10dp"
                    android:inputType="textPassword"
                    android:padding="18dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray03"/>

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/RegisterBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textColor="@color/white"
                android:layout_below="@id/confirmPasswordTil"
                android:background="@drawable/shape_button01"
                android:layout_marginTop="10dp"/>

        </RelativeLayout>

    </ScrollView>


</RelativeLayout>