<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="140dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="5dp"
    app:cardBackgroundColor="@color/white"
    app:cardElevation="0dp"
    app:contentPadding="5dp">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp">

        <RelativeLayout
            android:id="@+id/pdfRl"
            android:layout_width="100dp"
            android:layout_height="140dp"
            android:layout_marginEnd="5dp"
            android:background="@color/gray03">

            <com.github.barteksc.pdfviewer.PDFView
                android:id="@+id/pdfView"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

<!--            <ProgressBar-->
<!--                android:id="@+id/progressBar"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="match_parent" />-->

        </RelativeLayout>

        <TextView
            android:id="@+id/bookTitleTv"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/pdfRl"
            android:maxLines="1"
            android:text="@string/book_title" />

        <TextView
            android:id="@+id/bookDesTv"
            style="@style/TextAppearance.MaterialComponents.Body2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bookTitleTv"
            android:layout_toEndOf="@+id/pdfRl"
            android:maxLines="4"
            android:text="@string/book_description"
            android:textColor="@color/black" />

        <RelativeLayout
            android:id="@+id/textRl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toEndOf="@+id/pdfRl">


            <TextView
                android:id="@+id/categoryTv"
                style="@style/TextAppearance.MaterialComponents.Caption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:maxLines="1"
                android:text="@string/_13_mb" />

            <TextView
                android:id="@+id/sizeTv"
                style="@style/TextAppearance.MaterialComponents.Caption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"

                android:text="@string/_13_mb" />

            <TextView
                android:id="@+id/dateTv"
                style="@style/TextAppearance.MaterialComponents.Caption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@id/categoryTv"
                android:layout_toEndOf="@+id/sizeTv"
                android:maxLines="1"
                android:text="@string/dd_mm_yyyy"
                android:textAlignment="center" />


        </RelativeLayout>


    </RelativeLayout>

</androidx.cardview.widget.CardView>