<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back01"
    tools:context=".activities.CategoryActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:background="@drawable/shape_toolbar01">

        <ImageView
            android:id="@+id/logoIv"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/logo"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_a_new_category"
            android:layout_below="@id/logoIv"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/white"/>

    </RelativeLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/categoryTil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="245dp"
        app:hintEnabled="false"
        >

        <EditText
            android:id="@+id/categoryEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/category_title"
            android:textColorHint="@color/gray03"
            android:drawablePadding="10dp"
            android:background="@drawable/shape_edittext01"
            android:drawableLeft="@drawable/ic_category_gray"/>
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/submitBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:background="@drawable/shape_button01"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/categoryTil"/>

</RelativeLayout>