<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back01"
    tools:context=".activities.PdfAdminListActivity">

    <RelativeLayout
        android:id="@+id/toolbarRl"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@drawable/shape_toolbar02">

        <ImageButton
            android:id="@+id/backBtn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="Back"
            android:src="@drawable/ic_back_white"
            android:background="@color/transparent"/>

        <TextView
            android:id="@+id/titleTv"
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/book"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:textSize="20dp"
            android:textColor="@color/white"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/titleSubTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/titleTv"
            android:textSize="15sp"
            android:textColor="@color/white"/>

    </RelativeLayout>

    <EditText
        android:id="@+id/searchEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbarRl"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/shape_edittext01"
        android:drawableStart="@drawable/ic_search_gray"
        android:drawablePadding="5dp"
        android:textColor="@color/black"
        android:padding="15dp"
        android:hint="@string/search"
        android:textColorHint="@color/gray03"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/bookRec"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/searchEt"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        tools:listitem="@layout/row_pdf_admin" />

</RelativeLayout>