<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back01"
    tools:context=".activities.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:background="@drawable/shape_toolbar01">

        <ImageView
            android:id="@+id/iconIv"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:src="@drawable/logo"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Please Login"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="30sp"
            android:layout_below="@+id/iconIv"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-condensed"/>

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="225dp">
        
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_marginTop="15dp"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailTil"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintEnabled="false">
                
                <EditText
                    android:id="@+id/emailEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_email_gray"
                    android:background="@drawable/shape_edittext01"
                    android:hint="@string/email"
                    android:drawablePadding="10dp"
                    android:inputType="textEmailAddress"
                    android:padding="18dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray03"/>

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordTil"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_below="@id/emailTil"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                app:hintEnabled="false">

                <EditText
                    android:id="@+id/passwordEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_lock_gray"
                    android:hint="@string/password"
                    android:background="@drawable/shape_edittext01"
                    android:layout_marginTop="10dp"
                    android:drawablePadding="10dp"
                    android:inputType="textEmailAddress"
                    android:padding="18dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray03"/>

            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:id="@+id/forgotTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:textSize="15sp"
                android:layout_marginTop="10dp"
                android:layout_alignParentEnd="true"
                android:layout_below="@id/passwordTil"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/loginBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/login"
                android:textColor="@color/white"
                android:background="@drawable/shape_button01"
                android:layout_below="@id/forgotTv"/>

        </RelativeLayout>


    </ScrollView>

    <TextView
        android:id="@+id/noAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_user_signup"
        android:textColor="@color/black"
        android:layout_alignParentBottom="true"
        android:textSize="16sp"
        android:layout_marginBottom="20dp"
        android:layout_centerHorizontal="true"/>


</RelativeLayout>